profile avatar on profile spacing fix

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -48,6 +48,7 @@ div.profile-div {
     align-items: center;
     padding-bottom: 40px;
     justify-content: center;
+    padding-top: 18px;
 }
 
 .username-on-profile {
